--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
+    "cors": "^2.8.5",
+    "cros": "^1.1.0",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "mongodb": "^6.17.0",
     "nodemon": "^3.1.10"
   }
 }
