--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@stripe/react-stripe-js": "^3.8.0",
+    "@stripe/stripe-js": "^7.6.1",
     "cors": "^2.8.5",
     "cros": "^1.1.0",
     "dotenv": "^17.2.0",
