--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "cros": "^1.1.0",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "firebase-admin": "^13.4.0",
     "mongodb": "^6.17.0",
     "nodemon": "^3.1.10",
     "stripe": "^18.3.0"
